--- a/index.html
+++ b/index.html
@@ -222,6 +222,8 @@
         </div>
     </section>
 
+    <!-- -----------card------------ -->
+
     <section class="max-w-[80%] mx-auto mb-20 bg-base-200 rounded-lg hidden blank">
         <div class="text-center space-y-3 py-25">
             <div class="text-blue-500 text-6xl">
