--- a/index.html
+++ b/index.html
@@ -83,6 +83,26 @@
         <div class="flex justify-between bg-base-200 p-6 rounded-lg card-parent">
             <div class="space-y-4">
                 <div>
+                    <h2 class="text-xl font-semibold c-name">WebFlow Agency</h2>
+                    <p class="text-neutral/50 w-name">Web Designer & Developer</p>
+                </div>
+                <div>
+                    <p class="text-neutral/50 salary">Los Angeles, CA • Part-time • $80,000 - $120,000</p>
+                </div>
+                <button class="btn btn-soft btn-primary applicable">NOT APPLIED</button>
+                <p class="l-name">Create stunning web experiences for high-profile clients. Must have portfolio and experience with modern web design trends.</p>
+                <div>
+                    <button class="interview-btn btn btn-outline btn-accent font-semibold">INTERVIEW</button>
+                    <button" class="Rejected-btn btn btn-outline btn-error font-semibold">REJECTED</button>
+                </div>
+            </div>
+            <div class="i h-fit">
+                <i class="fa-regular fa-trash-can"></i>
+            </div>
+        </div>
+        <div class="flex justify-between bg-base-200 p-6 rounded-lg card-parent">
+            <div class="space-y-4">
+                <div>
                     <h2 class="text-xl font-semibold c-name">DataViz Solutions</h2>
                     <p class="text-neutral/50 w-name">Data Visualization Specialist</p>
                 </div>
@@ -200,26 +220,7 @@
                 <i class="fa-regular fa-trash-can"></i>
             </div>
         </div>
-        <div class="flex justify-between bg-base-200 p-6 rounded-lg card-parent">
-            <div class="space-y-4">
-                <div>
-                    <h2 class="text-xl font-semibold c-name">Mobile First Corp</h2>
-                    <p class="text-neutral/50 w-name">React Native Developer</p>
-                </div>
-                <div>
-                    <p class="text-neutral/50 salary">Remote • Full-time • $130,000 - $175,000</p>
-                </div>
-                <button class="btn btn-soft btn-primary applicable">NOT APPLIED</button>
-                <p class="l-name">Build cross-platform mobile applications using React Native. Work on products used by millions of users worldwide.</p>
-                <div>
-                    <button class="interview-btn btn btn-outline btn-accent font-semibold">INTERVIEW</button>
-                    <button" class="Rejected-btn btn btn-outline btn-error font-semibold">REJECTED</button>
-                </div>
-            </div>
-            <div class="i h-fit">
-                <i class="fa-regular fa-trash-can"></i>
-            </div>
-        </div>
+        
     </section>
 
     <!-- -----------card------------ -->
